css/style.css
@import "./normalize.css";

:root {
  --color-primary: #2584ff;
  --color-secondary: #00d9ff;
  --color-accent: #ff3400;
  --color-headings: #1b0760;
  --color-body: #918ca4;
  --color-body-darker: #5c5577;
  --color-border: #ccc;
  --border-radius: 30px;
}

*, *::after, *::before {
  box-sizing: border-box;
}



/* Typography */
::selection {
  background: var(--color-primary);
  color: #fff;
}

html {
  font-size: 62.5%;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 1.8rem;
  line-height: 1.3;
  color: var(--color-body);
  overflow-x: hidden;
}

h1,h2,h3 {
  color: var(--color-headings);
  margin-bottom: 1rem;
}

h1 {
  font-size: 3.2rem;
  line-height: 1.1;
  margin-bottom: 1.4rem
}

h2 {
  font-size: 2.9rem;
  line-height: 1.15;
}

h3 {
  font-size: 2.5rem;
  font-weight: 600;
}

p {
  margin-top: 0;
}

@media screen and (min-width: 440px) {
  body{
    font-size: 2rem;
  }

  h1{
    font-size: 5rem;
  }

  h2{
    font-size: 4rem;
  }

  h3{
    font-size: 2.8rem;
  }
}

@media screen and (min-width: 1024px) {
  body {
    font-size: 1.8rem;
  }

  h1{
    font-size: 7rem; 
  }
  
  h2 {
    font-size: 4.5rem;
  }

  h3 {
    font-size: 3rem;
  }
}



/* Icons */
.icon {
  width: 35px;
  height: 35px;
}

.icon--small{
  width: 16px;
  height: 16px;
}

.icon--primary {
  fill: var(--color-primary);
}

.icon--accent {
  fill: var(--color-accent);
}

.icon--white {
  fill: #fff;
}

.icon-container {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 52px;
  height: 52px;
  border-radius: 100%;
  background: #f3f9fa;
  overflow: hidden;
}

.icon-container--accent {
  background: var(--color-accent);
}

.icon-container--dark {
  background: #1d1d1d;
}

@media screen and (min-width: 400px) {
  .icon-container {
    width: 64px;
    height: 64px;
  }

  .icon {
    width: 40px;
    height: 40px;
  }

  .icon--small{
    width: 30px;
    height: 30px;
  }
}


/* Lists */
.list {
  list-style: none;
  padding: 0;
  margin: 0;
  color: inherit;
}



/* Links */
a {
  text-decoration: none;
  display: inline-block;
  color: inherit;
}

.link-arrow {
  color: var(--color-accent);
  text-transform: uppercase;
  font-size: 1.8rem;
  font-weight: bold;
  display: flex;
  align-items: center;
}

.link-arrow .icon {
  fill: var(--color-accent);
  height: 2.2rem;
  width: 2.2rem;
  margin-left: 5px;
  transition: margin 0.15s;
}

.link-arrow:hover .icon {
  margin-left: 8px;
}

@media screen and (min-width: 440px) {
  .link-arrow {
    font-size: 2rem;
  }
}

@media screen and (min-width: 1024px) {
  .link-arrow {
    font-size: 1.8rem;
  }

  .link-arrow .icon {
    height: 1.8rem;
    width: 1.8rem;
  }
}



/* Collapsibles */
.collapsible__content {
  max-height: 0;;
  overflow: hidden;
  opacity: 0;
  transition: all 0.3s;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

.collapsible__header {
  display: flex;
  justify-content: space-between;
}

.collapsible__heading {
  font-size: 3rem;
  margin-top: 0;
}




/* Navigation Bar */
.navbar {
  background: #000;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 1.2rem;
  margin-bottom: -1px;
  border-bottom: 2px solid #222;
}

.nav__logo {
  height: 45px;
  margin: 0;
  margin-left: 3px;
}

.nav__list {
  width: 100%;
}

.nav__item {
  padding: 1rem;
  border-bottom: 1px solid #222;
}

.nav__item:last-child {
  border-bottom: none;
  padding-bottom: 0.6rem;
}

.nav__item > a {
  color: #d2d0db;
  transition: color .3s;
}

.nav__item > a:hover {
  color: #fff;
}

.nav__toggler {
  opacity: .5;
  border: 2px solid #000;
  border-radius: 5px;
  padding: 0 5px;
  cursor: pointer;
  transition: all .3s;
}

.nav__toggler:hover {
  opacity: 1;
}

.navbar.collapsible--expanded .nav__toggler {
  opacity: 1;
  border: 2px solid #fff;
}

.navbar.collapsible--expanded .nav__toggler:hover {
  box-shadow: 0 0 3px 3px #666;
}

@media screen and (min-width: 768px) {
  .nav__toggler {
    display: none;
  }

  .nav__list {
    width: auto;
    display: flex;
    max-height: 100%;
    opacity: 1;
  }

  .nav__item {
    border: 0;
    padding: 1rem 2rem;
  }

  .nav__item:last-child {
    padding-right: 1rem;
  }
}

@media screen and (min-width: 1024px) {
  .nav__logo {
    height: 40px;
  }

  .navbar {
    padding: 1rem;
  }
}



/* Buttons */
.btn {
  font-size: 1.4rem;
  font-weight: 600;
  text-align: center;
  text-transform: uppercase;
  padding: 2rem 3rem;
  border: 0;
  border-radius: var(--border-radius);
  cursor: pointer;
  white-space: nowrap;
  margin: 1rem 0;
}

.btn--outline {
  background: #fff;
  color: var(--color-headings);
  border: 2px solid var(--color-headings);
}

.btn--outline:hover {
  background: var(--color-headings);
  color: #fff;
}

.btn--primary {
  background: var(--color-primary);
  color: #fff;
}

.btn--primary:hover {
  background: #006fff;
}

.btn--secondary {
  background: var(--color-secondary);
  color: #fff;
}

.btn--secondary:hover {
  background: #00c8eb;
}

.btn--accent {
  background: var(--color-accent);
  color: #fff;
}

.btn--accent:hover{
  background: #ec3000;
}

.btn--stretched {
  padding-left: 3rem;
  padding-right: 3rem;
}

.btn--block {
  width: 100%;
  display: inline-block;
}
@media screen and (min-width: 450px) {
  .btn {
    font-size: 1.8rem;
  }

  .btn--stretched {
    padding-left: 6rem;
    padding-right: 6rem;
  }
}

@media screen and (min-width: 1024px) {
  .btn {
    font-size: 1.6rem;
  }
}



/* Media */
.media {
  display: flex;
  margin-bottom: 2rem;
}

.media__title {
  margin-top: 0;
}

.media__body {
  margin: 0 1.5rem;
}

.media__image{
  margin-top: 1rem;
}



/* Cards */
.card {
  border-radius: 7px;
  box-shadow: 0 0 20px 10px #f3f3f3;
  overflow: hidden;
}

.card__header, .card__body {
  padding: 2rem 3rem;
}
/* ... */

